added more basic html to index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Sydney Taylor-Monteiro</title>
   </head>
-  <body></body>
+  <body>
+    <h2>👋Hi am</h2>
+    <h1>Sydney Taylor-Monteiro</h1>
+    <h3>🌍Front-end developer, based in Cape Town</h3>
+
+    <a href="about.html">Contact Me</a>
+    <a href="about.html">About Me</a>
+  </body>
 </html>
