updated html on about.html page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Sydney Taylor-Monteiro</title>
+    <title>About Sydney Taylor-Monteiro</title>
   </head>
-  <body></body>
+  <body>
+    <a href="index.html">Back to homepage</a>
+    <h1>About me</h1>
+    <h3>🌍Front-end developer from Cape Town, South Africa</h3>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum.
+      <br />
+      <br />
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum.
+      <br />
+      <br />
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum.
+    </p>
+    <h2>📧Contact me</h2>
+    <a href="mailto:sydk.tm17@gmail.com">sydk.tm17@gmail.com</a>
+  </body>
 </html>
