--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@
       veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
       harum.
     </p>
-    <h2>📧Contact me</h2>
-    <a href="mailto:sydk.tm17@gmail.com">sydk.tm17@gmail.com</a>
+    <div id="contact">
+      <h2>📧Contact me</h2>
+      <a href="mailto:sydk.tm17@gmail.com">sydk.tm17@gmail.com</a>
+    </div>
   </body>
 </html>
