--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Sydney Taylor-Monteiro</h1>
     <h3>🌍Front-end developer, based in Cape Town</h3>
 
-    <a href="about.html">Contact Me</a>
+    <a href="about.html#contact">Contact Me</a>
     <a href="about.html">About Me</a>
   </body>
 </html>
