--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <h2>👋Hi am</h2>
     <h1>Sydney Taylor-Monteiro</h1>
     <h3>🌍Front-end developer, based in Cape Town</h3>
-
-    <a href="about.html#contact">Contact Me</a>
-    <a href="about.html">About Me</a>
+    <div class="navigation-links">
+      <a href="about.html#contact">Contact Me</a>
+      <a href="about.html">About Me</a>
+    </div>
   </body>
 </html>
