--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Sydney Taylor-Monteiro</h1>
     <h3>🌍Front-end developer, based in Cape Town</h3>
     <div class="navigation-links">
-      <a href="about.html#contact">Contact Me</a>
-      <a href="about.html">About Me</a>
+      <a href="about.html#contact" class="contact-link">Contact Me</a>
+      <a href="about.html " class="about-link">About Me</a>
     </div>
   </body>
 </html>
