updated about.html and css

--- a/about.html
+++ b/about.html
@@ -7,37 +7,40 @@
     <title>About Sydney Taylor-Monteiro</title>
   </head>
   <body>
-    <a href="index.html">Back to homepage</a>
+    <a href="index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
     <h3>🌍Front-end developer from Cape Town, South Africa</h3>
-
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
-      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
-      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
-      harum.
-      <br />
-      <br />
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
-      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
-      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
-      harum.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
-      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
-      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
-      harum.
-      <br />
-      <br />
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
-      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
-      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
-      harum.
-    </p>
+    <div class="about-paragraphs">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+        <br />
+        <br />
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+        <br />
+        <br />
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+      </p>
+    </div>
     <div id="contact">
       <h2>📧Contact me</h2>
-      <a href="mailto:sydk.tm17@gmail.com">sydk.tm17@gmail.com</a>
+      <a href="mailto:sydk.tm17@gmail.com" class="email-link"
+        >sydk.tm17@gmail.com</a
+      >
     </div>
   </body>
 </html>
