added image to about me page

--- a/about.html
+++ b/about.html
@@ -17,30 +17,28 @@
     <h1>About me</h1>
     <h3>🌍Front-end developer from Cape Town, South Africa</h3>
     <div class="about-paragraphs">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-        <br />
-        <br />
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-        <br />
-        <br />
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
+      <div class="row">
+        <div class="col-sm-6 text-center">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum.
+            <br />
+            <br />
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum.
+          </p>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="images/syd-project.jpg"
+            class="image-fluid rounded shadow-sm"
+          />
+        </div>
+      </div>
     </div>
     <div id="contact">
       <h2>📧Contact me</h2>
