created new pages and added a navbar, also added bootstrap js in <head>

--- a/about.html
+++ b/about.html
@@ -33,10 +33,7 @@
           </p>
         </div>
         <div class="col-sm-6">
-          <img
-            src="images/syd-project.jpg"
-            class="image-fluid rounded shadow-sm"
-          />
+          <img src="images/syd-project.jpg" class="image-fluid" />
         </div>
       </div>
     </div>
