--- a/about.html
+++ b/about.html
@@ -9,6 +9,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style/style.css" />
     <title>About Sydney Taylor-Monteiro</title>
   </head>
@@ -16,9 +21,9 @@
     <a href="index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
     <h3>🌍Front-end developer from Cape Town, South Africa</h3>
-    <div class="about-paragraphs">
+    <div class="container">
       <div class="row">
-        <div class="col-sm-6 text-center">
+        <div class="col-sm-6">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
             aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
@@ -33,7 +38,9 @@
           </p>
         </div>
         <div class="col-sm-6">
-          <img src="images/syd-project.jpg" class="image-fluid" />
+          <p>
+            <img src="images/syd-resized.jpg" class="image-fluid" />
+          </p>
         </div>
       </div>
     </div>
