--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Sydney Taylor-Monteiro</a>
         <button
           class="navbar-toggler"
           type="button"
