--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About Sydney Taylor-Monteiro is a frontend developer based in Cape Town"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,11 +18,11 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="/style/style.css" />
     <title>About Sydney Taylor-Monteiro</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Sydney Taylor-Monteiro</a>
         <button
@@ -35,24 +39,43 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="/index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="About Sydney Taylor-Monteiro"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Work</a>
+              <a
+                class="nav-link"
+                href="/work.html"
+                title="Work done by Sydney Taylor-Monteiro"
+                >Work</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a
+                class="nav-link"
+                href="/contact.html"
+                title="Contact Sydney Taylor-Monteiro"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <a href="index.html" class="homepage-link">Back to homepage</a>
+    <a href="/index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
     <h3>🌍Front-end developer from Cape Town, South Africa</h3>
     <div class="container">
@@ -73,7 +96,11 @@
         </div>
         <div class="col-sm-6">
           <p>
-            <img src="images/syd-resized.jpg" class="image-fluid" />
+            <img
+              src="/images/syd-resized.jpg"
+              class="image-fluid"
+              alt="Image of Sydney Taylor-Monteiro"
+            />
           </p>
         </div>
       </div>
