--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Sydney Taylor-Monteiro is a frontend developer based in Cape Town, check out her projects and contact her for job inquiries"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,13 +18,15 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style/style.css" />
-    <title>Sydney Taylor-Monteiro</title>
+    <link rel="stylesheet" href="/style/style.css" />
+    <title>Frontend developer - Sydney Taylor-Monteiro</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sydney Taylor-Monteiro</a>
+        <a class="navbar-brand" href="#" title="Homepage"
+          >Sydney Taylor-Monteiro</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -35,18 +41,37 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Sydney Taylor-Monteiro"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Work</a>
+              <a
+                class="nav-link"
+                href="/work.html"
+                title="Work done by Sydney Taylor-Monteiro"
+                >Work</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a
+                class="nav-link"
+                href="/contact.html"
+                title="Contact Sydney Taylor-Monteiro"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -56,10 +81,19 @@
     <h1>Sydney Taylor-Monteiro</h1>
     <h3>🌍Front-end developer, based in Cape Town</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact Me</a>
-      <a href="about.html " class="about-link">About Me</a>
-      <a href="work.html">My Work</a>
-      <a href="contact.html">Real contact</a>
+      <a href="/about.html#contact" class="contact-link">Contact Me</a>
+      <a
+        href="/about.html "
+        class="about-link"
+        title="About Sydney Taylor-Monteiro"
+        >About Me</a
+      >
+      <a href="/work.html" title="Work done by Sydney Taylor-Monteiro"
+        >My Work</a
+      >
+      <a href="/contact.html" title="Contact Sydney Taylor-Monteiro"
+        >Real contact</a
+      >
     </div>
   </body>
 </html>
