added new image and added some media queries

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
         <div class="col-sm-6">
           <p>
             <img
-              src="/images/syd-resized.jpg"
+              src="/images/sydney_resized.jpeg"
               class="image-fluid"
               alt="Image of Sydney Taylor-Monteiro"
             />
