--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
           <p>
             <img
               src="/images/sydney_resized.jpeg"
-              class="image-fluid"
+              class="image-fluid rounded"
               alt="Image of Sydney Taylor-Monteiro"
             />
           </p>
