--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
     </nav>
     <a href="/index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
-    <h3>🌍Front-end developer from Cape Town, South Africa</h3>
+    <h3 class="mb-4">🌍Front-end developer from Cape Town, South Africa</h3>
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
