--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/style/style.css" />
     <title>Frontend developer - Sydney Taylor-Monteiro</title>
   </head>
@@ -79,7 +91,7 @@
     </nav>
     <h2>👋Hi am</h2>
     <h1>Sydney Taylor-Monteiro</h1>
-    <h3>🌍Front-end developer, based in Cape Town</h3>
+    <h3 class="mt-4">🌍Front-end developer, based in Cape Town</h3>
     <div class="navigation-links">
       <a href="/about.html#contact" class="contact-link">Contact Me</a>
       <a
@@ -94,6 +106,11 @@
       <a href="/contact.html" title="Contact Sydney Taylor-Monteiro"
         >Real contact</a
       >
+    </div>
+    <div class="contact-icons">
+      <i class="fa-brands fa-github"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-linkedin"></i>
     </div>
   </body>
 </html>
