--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/c01dbe3468.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/style/style.css" />
     <title>Frontend developer - Sydney Taylor-Monteiro</title>
   </head>
@@ -107,7 +111,7 @@
         >Real contact</a
       >
     </div>
-    <div class="contact-icons">
+    <div class="contact-icons center">
       <i class="fa-brands fa-github"></i>
       <i class="fa-brands fa-instagram"></i>
       <i class="fa-brands fa-linkedin"></i>
