--- a/index.html
+++ b/index.html
@@ -38,79 +38,68 @@
     <title>Frontend developer - Sydney Taylor-Monteiro</title>
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#" title="Homepage"
-          >Sydney Taylor-Monteiro</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/index.html"
-                title="Homepage"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/about.html"
-                title="About Sydney Taylor-Monteiro"
-                >About</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/work.html"
-                title="Work done by Sydney Taylor-Monteiro"
-                >Work</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/contact.html"
-                title="Contact Sydney Taylor-Monteiro"
-                >Contact</a
-              >
-            </li>
-          </ul>
+    <div class="hero">
+      <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#" title="Homepage"
+            >Sydney Taylor-Monteiro</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/index.html"
+                  title="Homepage"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="/about.html"
+                  title="About Sydney Taylor-Monteiro"
+                  >About</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="/work.html"
+                  title="Work done by Sydney Taylor-Monteiro"
+                  >Work</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="/contact.html"
+                  title="Contact Sydney Taylor-Monteiro"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+      <p>👋Hi am</p>
+      <h1>Sydney Taylor-Monteiro</h1>
+      <h3 class="mt-4">🌍Front-end developer, based in Cape Town</h3>
+      <div class="navigation-links">
+        <a href="/about.html#contact" class="btn btn-branding">Contact Me</a>
       </div>
-    </nav>
-    <h2>👋Hi am</h2>
-    <h1>Sydney Taylor-Monteiro</h1>
-    <h3 class="mt-4">🌍Front-end developer, based in Cape Town</h3>
-    <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link">Contact Me</a>
-      <a
-        href="/about.html "
-        class="about-link"
-        title="About Sydney Taylor-Monteiro"
-        >About Me</a
-      >
-      <a href="/work.html" title="Work done by Sydney Taylor-Monteiro"
-        >My Work</a
-      >
-      <a href="/contact.html" title="Contact Sydney Taylor-Monteiro"
-        >Real contact</a
-      >
-    </div>
     <div class="contact-icons center">
       <i class="fa-brands fa-github"></i>
       <i class="fa-brands fa-instagram"></i>
