added some color to button and removed unwanted links

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
   </head>
   <body>
     <div class="hero">
-      <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+      <nav
+        class="navbar fixed-top navbar-expand-lg bg-branding bg-body-tertiary"
+      >
         <div class="container-fluid">
           <a class="navbar-brand" href="#" title="Homepage"
             >Sydney Taylor-Monteiro</a
@@ -100,6 +102,7 @@
       <div class="navigation-links">
         <a href="/about.html#contact" class="btn btn-branding">Contact Me</a>
       </div>
+    </div>
     <div class="contact-icons center">
       <i class="fa-brands fa-github"></i>
       <i class="fa-brands fa-instagram"></i>
