--- a/index.html
+++ b/index.html
@@ -38,64 +38,62 @@
     <title>Frontend developer - Sydney Taylor-Monteiro</title>
   </head>
   <body>
-    <div class="hero">
-      <nav
-        class="navbar fixed-top navbar-expand-lg bg-branding bg-body-tertiary"
-      >
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#" title="Homepage"
-            >Sydney Taylor-Monteiro</a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="/index.html"
-                  title="Homepage"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="/about.html"
-                  title="About Sydney Taylor-Monteiro"
-                  >About</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="/work.html"
-                  title="Work done by Sydney Taylor-Monteiro"
-                  >Work</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="/contact.html"
-                  title="Contact Sydney Taylor-Monteiro"
-                  >Contact</a
-                >
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar fixed-top navbar-expand-lg bg-branding bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#" title="Homepage"
+          >Sydney Taylor-Monteiro</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/index.html"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Sydney Taylor-Monteiro"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/work.html"
+                title="Work done by Sydney Taylor-Monteiro"
+                >Work</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/contact.html"
+                title="Contact Sydney Taylor-Monteiro"
+                >Contact</a
+              >
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+    <div class="hero">
       <p>👋Hi am</p>
       <h1>Sydney Taylor-Monteiro</h1>
       <h3 class="mt-4">🌍Front-end developer, based in Cape Town</h3>
@@ -103,10 +101,12 @@
         <a href="/about.html#contact" class="btn btn-branding">Contact Me</a>
       </div>
     </div>
-    <div class="contact-icons center">
-      <i class="fa-brands fa-github"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-linkedin"></i>
+    <div class="contact-icons text-center">
+      <div class="row spaced-evenly">
+        <div class="col-2"><i class="fa-brands fa-github"></i></div>
+        <div class="col-2"><i class="fa-brands fa-instagram"></i></div>
+        <div class="col-2"><i class="fa-brands fa-linkedin"></i></div>
+      </div>
     </div>
   </body>
 </html>
