added new images, edited css and html

--- a/index.html
+++ b/index.html
@@ -141,16 +141,17 @@
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img src="images/Bookclub_resized.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Dictionary App</h2>
+            <h2 class="mb-5">Bookclub Blog</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Ever wondered what the Wizarding World would have looked like had
+              the Order lost that dreadful day at the Battle of Hogwards and
+              instead of emerging triumphantly from the ashes Harry Potter, The
+              Boy Who Lived, died? Well, this is exactly what this captivating
+              fanfic is all about.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
