--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,9 @@
     </nav>
     <br />
     <br />
-    <a href="/index.html" class="homepage-link">Back to homepage</a>
+    <div class="d-flex justify-content-evenly">
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin"></i>
   </body>
 </html>
