added contact details to pages

--- a/contact.html
+++ b/contact.html
@@ -95,9 +95,11 @@
     </nav>
     <br />
     <br />
-    <div class="d-flex justify-content-evenly">
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-linkedin"></i>
+    <div class="d-flex justify-content-evenly contact-emoticons">
+      <i class="fa-brands fa-github"> GitHub</i>
+      <i class="fa-brands fa-instagram"> Instagram</i>
+      <i class="fa-brands fa-linkedin"> LinkedIn</i>
+      <i class="fa-regular fa-envelope"> sydk.tm17@gmail.com</i>
+    </div>
   </body>
 </html>
