--- a/about.html
+++ b/about.html
@@ -91,7 +91,6 @@
         </div>
       </div>
     </nav>
-    <a href="/index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
     <h3 class="mb-4">🌍Front-end developer from Cape Town, South Africa</h3>
     <div class="container">
@@ -126,6 +125,11 @@
       <a href="mailto:sydk.tm17@gmail.com" class="email-link"
         >sydk.tm17@gmail.com</a
       >
+    </div>
+    <div class="d-flex justify-content-evenly">
+      <i class="fa-brands fa-github"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-linkedin"></i>
     </div>
   </body>
 </html>
