--- a/work.html
+++ b/work.html
@@ -96,5 +96,10 @@
     <br />
     <br />
     <a href="/index.html" class="homepage-link">Back to homepage</a>
+    <div class="d-flex justify-content-evenly">
+      <i class="fa-brands fa-github"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-linkedin"></i>
+    </div>
   </body>
 </html>
