updated about.html content

--- a/about.html
+++ b/about.html
@@ -97,16 +97,19 @@
       <div class="row">
         <div class="col-sm-6">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
+            Sydney Taylor-Monteiro is a 23 year old frontend developer based in
+            Cape Town, South Africa.
             <br />
+            She started her coding journey in 2023 while in her 2nd year of an
+            International Relations degree. Looking for something more practical
+            to escape the constent essays which he had to write she discovered
+            her love for coding after her boyfriend suggested it as a hobby.
+            With zero knowledge and lots of delusion she applied to the SheCodes
+            Foundation workshops and to her surprise got in. Since then She's
+            been building up her coding skillset.
             <br />
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
+            Sydney's hobbies include reading, playing with her 3 Yorkshire
+            Terrier pups and spending lazy afternoons with her boyfriend.
           </p>
         </div>
         <div class="col-sm-6">
@@ -121,7 +124,7 @@
       </div>
     </div>
     <div id="contact">
-      <h2>📧Contact me</h2>
+      <h3>📧Contact me</h3>
       <a href="mailto:sydk.tm17@gmail.com" class="email-link"
         >sydk.tm17@gmail.com</a
       >
