edited about.html and index.html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/about.html" class="btn btn-branding"> Learn more </a>
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/about.html" class="btn btn-branding"> Learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -153,7 +153,7 @@
               Boy Who Lived, died? Well, this is exactly what this captivating
               fanfic is all about.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/about.html" class="btn btn-branding"> Learn more </a>
           </div>
         </div>
       </div>
