added content to work.html

--- a/work.html
+++ b/work.html
@@ -95,7 +95,65 @@
     </nav>
     <br />
     <br />
-    <a href="/index.html" class="homepage-link">Back to homepage</a>
+    <h2>Work</h2>
+    <br />
+    <br />
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Yogurt Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="/work.html" class="btn btn-branding"> Learn more </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="/work.html" class="btn btn-branding"> Learn more </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/Bookclub_resized.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Bookclub Blog</h2>
+            <p class="mb-5 text-muted">
+              Ever wondered what the Wizarding World would have looked like had
+              the Order lost that dreadful day at the Battle of Hogwards and
+              instead of emerging triumphantly from the ashes Harry Potter, The
+              Boy Who Lived, died? Well, this is exactly what this captivating
+              fanfic is all about.
+            </p>
+            <a href="/work.html" class="btn btn-branding"> Learn more </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br />
+    <br />
     <div class="d-flex justify-content-evenly">
       <i class="fa-brands fa-github"></i>
       <i class="fa-brands fa-instagram"></i>
